# gem2

./: CMakeLists.txt  gem2.cmake.in
cmake/: gem2Config.cmake.in
include/: gem.h
src/: gem.cpp
